# tauri-remote-builder

./: README.md  index.html  package.json
.github/workflows/: build-windows.yml  codexbox-codex-build-probe.yml
scripts/: create-tauri-icons.ps1
src/: main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
