[package]
name = "tauri-remote-builder"
version = "0.1.0"
description = "Minimal Tauri app built by GitHub Actions"
authors = ["MarcoMeyerDev"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "tauri_remote_builder_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
tauri = { version = "2", features = [] }
