[package]
name = "vanilla-html-css-js-tauri"
version = "0.1.0"
description = "Vanilla HTML CSS JavaScript Tauri app"
authors = ["MarcoMeyerDev"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "vanilla_html_css_js_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
tauri = { version = "2", features = [] }
