[package]
name = "fancy-todo-tauri"
version = "0.1.0"
description = "Fancy vanilla todo app built with Tauri"
authors = ["MarcoMeyerDev"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "fancy_todo_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
tauri = { version = "2", features = [] }
